--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native": "0.42.3",
     "react-native-animatable": "^1.2.2",
     "react-native-config": "^0.2.1",
+    "react-native-data-table": "^0.1.2",
     "react-native-device-info": "0.10.2",
     "react-native-drawer": "^2.3.0",
     "react-native-i18n": "1.0.0",
@@ -52,7 +53,6 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react-native": "2.0.0",
     "enzyme": "^2.6.0",
-    "husky": "^0.13.1",
     "ignite-animatable": "^1.0.0",
     "ignite-dev-screens": "^2.0.1",
     "ignite-i18n": "^1.0.0",
