Add form component

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "~15.4.1",
     "react-native": "0.42.3",
     "react-native-animatable": "^1.2.2",
+    "react-native-clean-form": "https://github.com/FurkanBinek/react-native-clean-form/tarball/master",
     "react-native-config": "^0.2.1",
     "react-native-data-table": "^0.1.2",
     "react-native-device-info": "0.10.2",
@@ -42,6 +43,8 @@
     "react-navigation": "1.0.0-beta.11",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
+    "redux-form": "^6.8.0",
+    "redux-form-immutable": "^6.3.2",
     "redux-persist": "^4.1.0",
     "redux-saga": "^0.14.3",
     "reduxsauce": "0.4.1",
